Fix conditions handling to use ActiveRecord's own merge_conditions, which will support all of ActiveRecord's ways to specify conditions, including hashes.  The latter was previously unsupported.  Test added.

--- a/test/fixtures/blog_comments.yml
+++ b/test/fixtures/blog_comments.yml
@@ -9,7 +9,7 @@ c2:
   blog_entry_id: 1
   name: jim
   email: jim@jim.com
-  url: http://cnn.com
+  url: http://example.com
   comment: Really great info - please see my blog http://wanker-spam.com
 
 c3:
